--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sequi ex sint hic recusandae corporis, et nostrum velit amet neque dolorum, dolorem accusantium quia tenetur quod vero commodi nemo ratione.</p>
+    </div>
     
 </body>
 </html>
