--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sequi ex sint hic recusandae corporis, et nostrum velit amet neque dolorum, dolorem accusantium quia tenetur quod vero commodi nemo ratione.</p>
     </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sequi ex sint hic recusandae corporis, et nostrum velit amet neque dolorum, dolorem accusantium quia tenetur quod vero commodi nemo ratione.</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sequi ex sint hic recusandae corporis, et nostrum velit amet neque dolorum, dolorem accusantium quia tenetur quod vero commodi nemo ratione.</p>
+    </div>
     
 </body>
 </html>
