--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sequi ex sint hic recusandae corporis, et nostrum velit amet neque dolorum, dolorem accusantium quia tenetur quod vero commodi nemo ratione.</p>
     </div>
+
+    <div>
+        <h3>How to push code segments:-</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ol>
+    </div>
+
     
 </body>
 </html>
