--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <li>git push</li>
         </ol>
     </div>
+    <div>
+        <h3>Checkout this beauty!!!</h3>
+        <img src="f1/appic-Y__ZYcowSo0-unsplash.jpg" width="800" height="400" alt="Image of a Sports Car">
+        
+    </div>
 
     
 </body>
